src/riot-prod/deploy/10-riot-prod-deploy.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: riot
  namespace: riot-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: riot
  template:
    metadata:
      labels:
        app: riot
    spec:
      containers:
      - image: gcr.io/wiresafe-project/riot-prod:latest
        name:  riot
        ports:
        - containerPort: 80
