src/riot-prod/deploy/20-riot-prod-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: riot-prod
  name: riot
  labels:
    app: riot
spec:
  type: NodePort
  selector:
    app: riot
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
