src/riot-prod/deploy/30-riot-prod-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: chat-wiresafe-com
    kubernetes.io/tls-acme: "true"
  name: riot
  namespace: riot-prod
spec:
  rules:
  - host: app.wiresafe.com
    http:
      paths:
      - backend:
          serviceName: riot
          servicePort: http
  tls:
  - hosts:
    - app.wiresafe.com
    secretName: app-wiresafe-com-tls
